# tokun

./: .gitignore  pyproject.toml
.data/shakespeare/: hamlet.md  macbeth.md  othello.md
.github/: README.md  TODO.md
articles/: llaminate.md  tokun.1.md  tokun.16.md  tokun.4.md  tokun.md  unicode.md
mlable/: sample.py  sampling.py
mlable/inputs/: ngrams.py  vocabulary.py
mlable/keras/: models.py
mlable/tensorflow/: data.py  initializers.py  io.py  layers.py  models.py  optimizers.py  sampling.py  summary.py
mlable/tokens/: bpe.py  ngrams.py
mlable/torch/: data.py  datasets.py  layers.py  optimizers.py  sampling.py
models/: vae.keras  vqvae.1x64.keras  vqvae.1x8.keras  vqvae.3x64.keras  vqvae.3x8.keras  vqvae.4x64.keras  vqvae.4x8.keras
notebooks/: demo.ipynb  model.ipynb  publish.ipynb  tokun.16.ipynb  tokun.4x4.keras.ipynb  tokun.demo.ipynb  tokun.publish.ipynb  tokun.test.ipynb  tokun.train.ipynb  train.ipynb
scripts/: export.py  publish.py  test.py  train.py
src/makemore/: cnn.keras.py  cnn.tensorflow.py  mlp.batch.tensorflow.py  mlp.regularization.tensorflow.py  mlp.tensorflow.py  mlp.tidy.tensorflow.py  mlp.viz.tensorflow.py  ngrams.py  ngrams.tensorflow.py
tests/: test_huggingface.py  test_pipeline.py
tests/models/: test_mlp.py
tests/pipeline/: test_flat.py  test_hilbert.py  test_square.py  test_text.py
tokun/: data.py  eval.py  evaluation.py  export.py  huggingface.py  layers.py  losses.py  main.py  meta.py  metrics.py  model.py  pipeline.py  test.py  tokun.1.keras.py  tokun.4.keras.py  tokun.4x4.keras.py  tokun.keras.py  train.py
tokun/layers/: dense.py
tokun/models/: klvae.py  mlp.py  (+1 more)
(+365 files in other folders)
