[tool.poetry]
name = "tokun"
version = "0.13.4"
description = "NN model specialized in text embedding."
authors = ["apehex <apehex@protonmail.com>"]
readme = ".github/README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
mlable = ">=0.7"
tensorflow = ">=2.15"

[tool.poetry.group.test.dependencies]
pytest = "*"

[tool.poetry.group.dev.dependencies]
tensorflow-datasets = ">=4.9"
transformers = ">=4.42"
huggingface-hub = {extras = ["cli"], version = ">=0.23"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
